# aproject-testing

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TwoUtils.h  _README.md  appveyor.yml  report.md
LibTwoUtils/: CMakeLists.txt
LibTwoUtils/main/: mainapp.cpp
LibTwoUtils/src/: CMakeLists.txt  TwoUtils.cpp
LibTwoUtils/test/unit_test/: CMakeLists.txt  TwoUtilsTest.cpp
cmake/Modules/: gmock.cmake
